# FlaskTtS

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  entrypoint.sh  pyproject.toml  requirements.txt
.github/workflow/: cd.yml
.github/workflows/: cd.yml
flasktts/: config.py  run.py
flasktts/app/: __init__.py  health.py  tts.py
flasktts/tasks/: ffmpeg.py  tasks.py
flasktts/tts/: kokorotts.py  qwen3tts.py  style2tts.py
tests/: conftest.py
tests/app/: test_tts.py
