[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FlaskTtS"
version = "0.1.0"
description = "A Flask API for Text-to-Speech"
authors = [{ name = "Derek Parks", email = "dnparks@gmail.com" }]
requires-python = ">=3.10"
dynamic = ["dependencies"]

[tool.setuptools]
packages = ["flasktts"]

[tool.setuptools.dynamic]
dependencies = { file = ["requirements.txt"] }

[project.optional-dependencies]
dev = ["pytest", "pytest-flask"]
